--- a/frontend/app/src/App.css
+++ b/frontend/app/src/App.css
@@ -13,6 +13,11 @@
   }
 }
 
+.redAsterisks::after{
+  content: "*";
+  color: red;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
